--- a/.babelrc
+++ b/.babelrc
@@ -5,7 +5,8 @@
   ],
   "plugins": [
     ["@babel/plugin-transform-class-properties"],
-    ["@babel/plugin-proposal-export-default-from"]
+    ["@babel/plugin-proposal-export-default-from"],
+    "date-fns"
   ]
 }
  
