--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "shallow-equal": "^1.2.1"
   },
   "peerDependencies": {
-    "date-fns": "3.0.6 || >=3.0.0",
+    "date-fns": "2.0.0-alpha.7 || >=2.0.0",
     "react": "^0.14 || ^15.0.0-rc || >=15.0"
   },
   "devDependencies": {
@@ -57,8 +57,9 @@
     "autoprefixer": "^9.7.3",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^9.1.3",
+    "babel-plugin-date-fns": "^2.0.0",
     "css-loader": "^3.6.0",
-    "date-fns": "^3.0.6",
+    "date-fns": "^2.8.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "enzyme-to-json": "^3.4.3",
